# ckanext-unfold

./: MANIFEST.in  README.md  gulpfile.js  package-lock.json  package.json  pyproject.toml  setup.cfg  test.ini
.github/workflows/: test.yml
ckanext/unfold/: exception.py  helpers.py  plugin.py  types.py  utils.py  views.py
ckanext/unfold/adapters/: 7z.py  _7z.py  __init__.py  gzip.py  rar.py  rpm.py  tar.py  zip.py
ckanext/unfold/assets/: script.js  unfold-init-jstree.js  webassets.yml
ckanext/unfold/assets/css/: unfold.css
ckanext/unfold/assets/js/: unfold-init-jstree.js
ckanext/unfold/logic/: action.py  schema.py  validators.py
ckanext/unfold/templates/: base.html  unfold_form.html  unfold_preview.html
ckanext/unfold/tests/: test_plugin.py  test_unfold.py
ckanext/unfold/tests/data/: test_archive.rar
ckanext/unfold/theme/: unfold.scss
