[metadata]
name = ckanext-unfold
version = 1.0.1
description = Provides previews for multiple archive formats
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com//ckanext-unfold
author = Oleksandr Cherniavskyi
author_email = mutantsan@gmail.com
license = AGPL
classifiers =
            Development Status :: 4 - Beta
            License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)
            Programming Language :: Python :: 3.8
            Programming Language :: Python :: 3.9
            Programming Language :: Python :: 3.10
keywords = CKAN

[options]
packages = find:
namespace_packages = ckanext
install_requires =
    rarfile==4.0
    py7zr==0.20.6
    rpmfile==1.1.1
    pydantic==2.3.0
include_package_data = True

[options.entry_points]
ckan.plugins =
             unfold = ckanext.unfold.plugin:UnfoldPlugin

babel.extractors =
                 ckan = ckan.lib.extract:extract_ckan

[options.extras_require]

[extract_messages]
keywords = translate isPlural
add_comments = TRANSLATORS:
output_file = ckanext/unfold/i18n/ckanext-unfold.pot
width = 80

[init_catalog]
domain = ckanext-unfold
input_file = ckanext/unfold/i18n/ckanext-unfold.pot
output_dir = ckanext/unfold/i18n

[update_catalog]
domain = ckanext-unfold
input_file = ckanext/unfold/i18n/ckanext-unfold.pot
output_dir = ckanext/unfold/i18n
previous = true

[compile_catalog]
domain = ckanext-unfold
directory = ckanext/unfold/i18n
statistics = true

[tool:pytest]
filterwarnings =
        ignore::sqlalchemy.exc.SADeprecationWarning
        ignore::sqlalchemy.exc.SAWarning
        ignore::DeprecationWarning
addopts = --ckan-ini test.ini
